--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prisma-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +25,7 @@
     "prisma": "^5.9.1"
   },
   "dependencies": {
-    "@prisma/client": "^5.9.1"
+    "@prisma/client": "^5.9.1",
+    "express": "4.18.2"
   }
 }
